// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Loading renders correctly 1`] = `
<div>
  <button
    class="css-1g162wt-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-17k4jap-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      >
        <span
          aria-atomic="false"
          class="css-zovuvr-boxStyles-ButtonLoadingDots"
        >
          <span
            class="css-avudkd-VisuallyHidden"
          >
            Busy
          </span>
          <span
            aria-hidden="true"
            class="css-ugmwb4-boxStyles-LoadingDots"
          />
          <span
            aria-hidden="true"
            class="css-135scy7-boxStyles-LoadingDots"
          />
          <span
            aria-hidden="true"
            class="css-163ssqx-boxStyles-LoadingDots"
          />
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Button Small Button renders correctly 1`] = `
<div>
  <button
    class="css-7v0o93-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;

exports[`Button With Icon renders correctly 1`] = `
<div>
  <button
    class="css-1g162wt-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
    <svg
      aria-hidden="true"
      class="css-sbsftc-Button"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4.5 19.177C6.743 17.962 9.423 17 12 17s5.257.962 7.5 2.177m-4.295-9.224a2.97 2.97 0 0 1-.382 1.445c-.25.444-.609.822-1.047 1.102a3.332 3.332 0 0 1-3.004.28 3.198 3.198 0 0 1-1.249-.888 3.018 3.018 0 0 1-.666-1.347 2.948 2.948 0 0 1 .075-1.489c.152-.483.425-.922.797-1.28a3.25 3.25 0 0 1 1.643-.845 3.335 3.335 0 0 1 1.856.175 3.18 3.18 0 0 1 1.44 1.135c.352.507.54 1.103.537 1.712Z"
      />
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
    </svg>
  </button>
</div>
`;

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="css-1g162wt-BaseButton-Button"
    data-testid="example"
    type="button"
  >
    <span>
      <span
        class="css-oobk4c-Button"
      >
        My button
      </span>
      <span
        aria-live="assertive"
      />
    </span>
  </button>
</div>
`;

exports[`ButtonLink renders correctly 1`] = `
<div>
  <a
    class="css-1bvq7zp-ButtonLink"
    data-testid="example"
    href="#"
  >
    My button link
  </a>
</div>
`;
